--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="">Investor Relations</a></li>
                     <li><a href="">Add restaurent</a></li>
                     <li><a href="">login</a></li>
-                    <li><a href="">sign u</a></li>
+                    <li><a href="">sign up</a></li>
                 </ul>
             </div>
         </nav>
